--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /vendor
 /.vagrant
 phpunit.xml
-/Homestead.yaml
+#/Homestead.yaml
 /Homestead.json
 /after.sh
 /aliases
 /mysqldump.sql.gz
 /mysql_backup
 /postgres_backup
-/user-customizations.sh
+#/user-customizations.sh
